--- a/styles/login.css
+++ b/styles/login.css
@@ -10,6 +10,11 @@ html {
     scroll-behavior: smooth;
 }
 
+
+body::-webkit-scrollbar{
+    display: none;
+}
+
 /* Section */
 
 section {
@@ -34,6 +39,7 @@ section {
 .InputSec {
     width: 50vw;
     display: flex;
+    flex-direction: column;
     justify-items: center;
     justify-content: center;
     align-items: center;
@@ -44,13 +50,13 @@ section {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 30px;
+    padding: 20px 30px;
     border-radius: 8px;
     box-shadow: 0px 0px 3px #0003;
 }
 
 #logoRight {
-    width: 100px;
+    width: 80px;
     border-radius: 100%;
 }
 
@@ -59,15 +65,14 @@ h2 {
     align-items: center;
     justify-content: center;
     color: #000000a2;
-    margin: 10px 0;
 }
 
 #note {
     color: #00000088;
-    font-size: 1vw;
+    font-size: 1.2vw;
     display: flex;
     justify-self: center;
-    margin: 15px 0px;
+    margin: 10px 0px;
 }
 
 label {
@@ -82,7 +87,8 @@ button {
     padding: 8px 10px;
     border-radius: 4px;
     border: transparent;
-    box-shadow: 0px 0px 3px #00000051;
+    box-shadow: 0px 0px 3px #00000051;     
+    letter-spacing: 1px;
 }
 
 button {
