--- a/styles/style.css
+++ b/styles/style.css
@@ -113,12 +113,13 @@ nav {
     background-color: #0003;
     height: 1px;
     justify-self: center;
+    margin: 0 0 20px;
 }
 
 /* section 1 */
 
 .section1 {
-    margin: 20px 0 50px;
+    margin: 20px 0;
     padding: 20px;
 }
 
@@ -171,6 +172,7 @@ nav {
 .section2 {
     width: 75%;
     padding: 30px 20px;
+    margin: 20px;
     box-shadow: 0px 0px 4px #0003;
     justify-self: center;
     border-radius: 8px;
