--- a/styles/solution.css
+++ b/styles/solution.css
@@ -27,7 +27,7 @@
 /* Split layout */
 #solutionContainer {
     display: flex;
-    height: 100vh;
+    /* height: 100vh; */
     overflow: hidden;
 }
 
