--- a/styles/nearbyshop.css
+++ b/styles/nearbyshop.css
@@ -7,8 +7,9 @@
     }
 
     #map {
-        height: 60vh;
-        max-width: 900px;
+        min-height: 70vh;
+        max-height: 100vh;
+        max-width: 1000px;
         margin: 20px auto;
         border-radius: 12px;
         overflow: hidden;
